option(AES256_SHARED_LIB "Build AES256 shared lib" ON)

IF (MSVC)
    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON) # generate .lib file to link dll to exe
ENDIF (MSVC)

IF (AES256_SHARED_LIB)
    add_library(aes256 SHARED aes256.cpp)
ELSE (AES256_SHARED_LIB)
    add_library(aes256 STATIC aes256.cpp)
ENDIF (AES256_SHARED_LIB)

SET_TARGET_PROPERTIES(
        aes256
    PROPERTIES
        SOVERSION 0
        VERSION 0.1
        INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_LIST_DIR})
INSTALL(TARGETS aes256 LIBRARY DESTINATION lib${LIB_SUFFIX})
INSTALL(DIRECTORY ./ DESTINATION include FILES_MATCHING PATTERN "*.hpp")
